hphp/test/zend/good/Zend/tests/bug60613.php.expectf

Fatal error: Method name must be a string in %s/bug60613.php on line 8
